Add to save csv recipe data to DB using spring batch
ApplicationRunner를 사용해서 최근 본 레시피 데이터와 북마크 데이터 예시도 추가

--- a/springboot/curry/build.gradle
+++ b/springboot/curry/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 
 	// jwt token
 	implementation 'com.auth0:java-jwt:4.2.1'
+
+	// batch
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
 }
 
 tasks.named('test') {
