--- a/springboot/curry/src/main/resources/application.properties
+++ b/springboot/curry/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/curry;MODE=MYSQL
 spring.datasource.username=sa
 spring.datasource.password=
+spring.batch.jdbc.initialize-schema=always
 spring.sql.init.encoding=UTF-8
 spring.sql.init.mode=always
 
@@ -18,4 +19,4 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 jwt.secret=secret
 jwt.expiration_time=864000000
 
-logging.config = classpath:logback/logback-default.xml
+logging.config=classpath:logback/logback-default.xml
