--- a/springboot/curry/src/main/resources/application.properties
+++ b/springboot/curry/src/main/resources/application.properties
@@ -19,4 +19,7 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 jwt.secret=secret
 jwt.expiration_time=864000000
 
+spring.redis.host=localhost
+spring.redis.port=6379
+
 logging.config=classpath:logback/logback-default.xml
