--- a/springboot/curry/build.gradle
+++ b/springboot/curry/build.gradle
@@ -37,8 +37,8 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
-	// jwt token
-	implementation 'com.auth0:java-jwt:4.2.1'
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	// batch
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
