--- a/springboot/curry/src/main/resources/application.properties
+++ b/springboot/curry/src/main/resources/application.properties
@@ -16,8 +16,9 @@ spring.h2.console.enabled=true
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-jwt.secret=secret
-jwt.expiration_time=864000000
+jwt.security.key=secret
+jwt.response.header=Authorization
+jwt.token.prefix=Bearer 
 
 spring.redis.host=localhost
 spring.redis.port=6379
