--- a/springboot/curry/src/main/resources/application.properties
+++ b/springboot/curry/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/curry;MODE=MYSQL;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:~/curry;MODE=MYSQL
 spring.datasource.username=sa
 spring.datasource.password=
 spring.batch.jdbc.initialize-schema=always
