--- a/springboot/curry/Dockerfile
+++ b/springboot/curry/Dockerfile
@@ -1,5 +1,9 @@
 FROM openjdk:11-jdk
 
+RUN git clone -b deploy https://github.com/Ottug-i/Curry_Back.git
+
+WORKDIR /Curry_Back
+
 ARG JAR_FILE=build/libs/*.jar
 
 COPY ${JAR_FILE} app.jar
