--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: SpringBoot Build
-      run: ./gradlew clean build --excluede-task test
+      run: ./gradlew clean build --exclude-task test
     
     - name: SpringBoot Docker Image Build
       run: docker build . --file Dockerfile --tag kimgagyeong/curry:springboot
