--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Spring Docker Image CI
 
 on:
   push:
-    branches: [ "deploy" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
