--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Change Working Directory to Project Root
+      run: cd springboot/curry
+      
     - name: SpringBoot Build
       run: ./gradlew clean build --exclude-task test
     
