--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: 11
+
     - name: Change Working Directory to Project Root
       run: cd springboot/curry
       
