--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,11 +12,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-
+      
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: 11
+        distribution: 'adopt'
+        java-version: '11'
 
     - name: Change Working Directory to Project Root
       run: cd springboot/curry
