--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,10 @@ jobs:
         java-version: '11'
 
     - name: Change Working Directory to Project Root
-      run: cd springboot/curry/gradle/wrapper
+      run: cd springboot/curry
+
+    - name: Grant Execute Permission for gradlew  
+      run: chmod +x gradlew
       
     - name: SpringBoot Build
       run: ./gradlew clean build --exclude-task test
