--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         java-version: '11'
 
     - name: Change Working Directory to Project Root
-      run: cd springboot/curry
+      run: cd ./springboot/curry
 
     - name: Grant Execute Permission for gradlew  
       run: chmod +x gradlew
