--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,9 @@ name: Spring Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+       - main
+       - deploy
   pull_request:
     branches: [ "main" ]
 
@@ -18,6 +20,9 @@ jobs:
       with:
         distribution: 'adopt'
         java-version: '11'
+
+    - name: Grant Execute Permission for gradlew  
+      run: chmod +x springboot/curry/gradlew
       
     - name: SpringBoot Build
       working-directory: springboot/curry
