--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,10 +3,7 @@ name: Spring Docker Image CI
 on:
   push:
     branches:
-       - main
        - deploy
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -14,6 +11,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.pull_request.head.ref }}
       
     - name: Set up JDK 11
       uses: actions/setup-java@v2
@@ -29,6 +28,7 @@ jobs:
       run: ./gradlew clean build --exclude-task test
     
     - name: SpringBoot Docker Image Build
+      working-directory: springboot/curry
       run: docker build . --file Dockerfile --tag kimgagyeong/curry:springboot
 
     - name: Docker Login
