--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,8 @@ name: Spring Docker Image CI
 
 on:
   push:
-    branches:
-       - deploy
-
+    branches: ["deploy"]
+    
 jobs:
   build:
     runs-on: ubuntu-latest
