--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Spring Docker Image CI
 
 on:
   push:
-    branches: ["main"]
+    branches: ["origin/deploy"]
     
 jobs:
   build:
@@ -11,7 +11,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       with:
-        ref: deploy
+        ref: origin/deploy
       
     - name: Set up JDK 11
       uses: actions/setup-java@v2
