--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,8 +34,13 @@ jobs:
     - name: Replace secrets in application.properites
       working-directory: springboot/curry/src/main/resources
       run: |
-          envsubst < application.properties > application.properties.tmp
-          mv application.properties.tmp application.properties
+        sed -i "s|{MYSQL_URL}|${MYSQL_URL}|g" application.properties
+        sed -i "s|{MYSQL_USERNAME}|${MYSQL_USERNAME}|g" application.properties
+        sed -i "s|{MYSQL_PASSWORD}|${MYSQL_PASSWORD}|g" application.properties
+        sed -i "s|{JWT_SECURITY_KEY}|${JWT_SECURITY_KEY}|g" application.properties
+        sed -i "s|{REDIS_URL}|${REDIS_URL}|g" application.properties
+        sed -i "s|{REDIS_PASSWORD}|${REDIS_PASSWORD}|g" application.properties
+        sed -i "s|{FLASK_URL}|${FLASK_URL}|g" application.properties
 
     - name: SpringBoot Build
       working-directory: springboot/curry
