--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,16 +34,16 @@ jobs:
     - name: Replace secrets in application.properites
       working-directory: springboot/curry/src/main/resources
       run: |
-        sed -i "s|{MYSQL_URL}|${MYSQL_URL}|g" application.properties
-        sed -i "s|{MYSQL_USERNAME}|${MYSQL_USERNAME}|g" application.properties
-        sed -i "s|{MYSQL_PASSWORD}|${MYSQL_PASSWORD}|g" application.properties
-        sed -i "s|{JWT_SECURITY_KEY}|${JWT_SECURITY_KEY}|g" application.properties
-        sed -i "s|{REDIS_URL}|${REDIS_URL}|g" application.properties
-        sed -i "s|{REDIS_PASSWORD}|${REDIS_PASSWORD}|g" application.properties
-        sed -i "s|{FLASK_URL}|${FLASK_URL}|g" application.properties
+        sed -i "s|{MYSQL_URL}|${MYSQL_URL}|g" application-local.properties
+        sed -i "s|{MYSQL_USERNAME}|${MYSQL_USERNAME}|g" application-local.properties
+        sed -i "s|{MYSQL_PASSWORD}|${MYSQL_PASSWORD}|g" application-local.properties
+        sed -i "s|{JWT_SECURITY_KEY}|${JWT_SECURITY_KEY}|g" application-local.properties
+        sed -i "s|{REDIS_URL}|${REDIS_URL}|g" application-local.properties
+        sed -i "s|{REDIS_PASSWORD}|${REDIS_PASSWORD}|g" application-local.properties
+        sed -i "s|{FLASK_URL}|${FLASK_URL}|g" application-local.properties
 
     - name: Print modified application.properties
-      run: cat springboot/curry/src/main/resources/application.properties
+      run: cat springboot/curry/src/main/resources/application-local.properties
       
     - name: SpringBoot Build
       working-directory: springboot/curry
