--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,13 +34,8 @@ jobs:
     - name: Replace secrets in application.properites
       working-directory: springboot/curry/src/main/resources
       run: |
-        sed -i "s|{MYSQL_URL}|${MYSQL_URL}|g" application-local.properties
-        sed -i "s|{MYSQL_USERNAME}|${MYSQL_USERNAME}|g" application-local.properties
-        sed -i "s|{MYSQL_PW}|${MYSQL_PW}|g" application-local.properties
-        sed -i "s|{JWT_SECURITY_KEY}|${JWT_SECURITY_KEY}|g" application-local.properties
-        sed -i "s|{REDIS_URL}|${REDIS_URL}|g" application-local.properties
-        sed -i "s|{REDIS_PW}|${REDIS_PW}|g" application-local.properties
-        sed -i "s|{FLASK_URL}|${FLASK_URL}|g" application-local.properties
+          envsubst < application-local.properties > application-local.properties.tmp
+          mv application-local.properties.tmp application-local.properties
 
     - name: SpringBoot Build
       working-directory: springboot/curry
