--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Spring Docker Image CI
+name: Spring Docker Image CI/CD
 
 on:
   push:
@@ -12,6 +12,10 @@ env:
   REDIS_URL: ${{ secrets.REDIS_URL }}
   REDIS_PW: ${{ secrets.REDIS_PW }}
   FLASK_URL: ${{ secrets.FLASK_URL }}
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  DOCKER_IMAGE_NAME: springboot
+  GCE_INSTANCE: ${{ secrets.GCE_INSTANCE }}
+  GCE_INSTANCE_ZONE: ${{ secrets.GCE_INSTANCE_ZONE}}
   
 jobs:
   build:
@@ -21,6 +25,15 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: deploy
+
+    - name: Setup gcloud CLI
+      uses: google-github-actions/setup-gcloud@v0
+      with:
+          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          export_default_credentials: true
+    - run: |-
+          gcloud auth configure-docker
       
     - name: Set up JDK 11
       uses: actions/setup-java@v2
@@ -34,13 +47,13 @@ jobs:
     - name: Replace secrets in application.properites
       working-directory: springboot/curry/src/main/resources
       run: |
-        sed -i "s|{MYSQL_URL}|${MYSQL_URL}|g" application-local.properties
-        sed -i "s|{MYSQL_USERNAME}|${MYSQL_USERNAME}|g" application-local.properties
-        sed -i "s|{MYSQL_PW}|${MYSQL_PW}|g" application-local.properties
-        sed -i "s|{JWT_SECURITY_KEY}|${JWT_SECURITY_KEY}|g" application-local.properties
-        sed -i "s|{REDIS_URL}|${REDIS_URL}|g" application-local.properties
-        sed -i "s|{REDIS_PW}|${REDIS_PW}|g" application-local.properties
-        sed -i "s|{FLASK_URL}|${FLASK_URL}|g" application-local.properties
+        sed -i "s|{MYSQL_URL}|${MYSQL_URL}|g" application-prod.properties
+        sed -i "s|{MYSQL_USERNAME}|${MYSQL_USERNAME}|g" application-prod.properties
+        sed -i "s|{MYSQL_PW}|${MYSQL_PW}|g" application-prod.properties
+        sed -i "s|{JWT_SECURITY_KEY}|${JWT_SECURITY_KEY}|g" application-prod.properties
+        sed -i "s|{REDIS_URL}|${REDIS_URL}|g" application-prod.properties
+        sed -i "s|{REDIS_PW}|${REDIS_PW}|g" application-prod.properties
+        sed -i "s|{FLASK_URL}|${FLASK_URL}|g" application-prod.properties
 
     - name: SpringBoot Build
       working-directory: springboot/curry
@@ -48,13 +61,14 @@ jobs:
     
     - name: SpringBoot Docker Image Build
       working-directory: springboot/curry
-      run: docker build . --file Dockerfile --tag kimgagyeong/curry:springboot
+      run: docker build . --file Dockerfile --tag "gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:$GITHUB_SHA"
 
-    - name: Docker Login
-      uses: docker/login-action@v2
-      with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: SpringBoot Docker Image Push
+      run: |-
+          docker push "gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:$GITHUB_SHA"
 
-    - name: Docker Hub Push
-      run: docker push kimgagyeong/curry:springboot
+    - name: Deploy to Google Compute Engine
+      run: |-
+          gcloud compute instances update-container "$GCE_INSTANCE" \
+            --zone "$GCE_INSTANCE_ZONE" \
+            --container-image "gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:$GITHUB_SHA"
