--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -70,16 +70,16 @@ jobs:
     - name: Replace secrets in docker-compse.yml
       working-directory: springboot/curry
       run: |-
-        sed -i "s|${MYSQL_PASSWORD}|${MYSQL_PW}|g" docker-compse.yml
-        sed -i "s|${REDIS_PASSWORD}|${REDIS_PW}|g" docker-compse.yml
-        sed -i "s|${$PROJECT_ID}|${PROJECT_ID}|g" docker-compse.yml
+        sed -i "s|${MYSQL_PW}|${MYSQL_PW}|g" docker-compse.yml
+        sed -i "s|${REDIS_PW}|${REDIS_PW}|g" docker-compse.yml
+        sed -i "s|${PROJECT_ID}|${PROJECT_ID}|g" docker-compse.yml
 
     - name: Deploy to Google Compute Engine
       working-directory: springboot/curry
       run: |-
           docker-compose -f docker-compose.yml up -d
 
-   - name: Clean up Docker containers and images
-     run: |
+    - name: Clean up Docker containers and images
+      run: |
           docker container prune -f
           docker image prune -f
