--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -80,7 +80,7 @@ jobs:
           username: smcurry2023
           key: ${{ secrets.GCP_SSH_KEY }}
           script: |
-            cd /path/to/your/docker-compose/folder
+            cd /home/smcurry2023
             docker-compose up -d
             docker container prune -f
             docker image prune -f
