--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -73,6 +73,7 @@ jobs:
           --command="curl -O https://gist.githubusercontent.com/kurokobo/25e41503eb060fee8d8bec1dd859eff3/raw/0d7cd29472f0eaa26ce424071456ad84b24fb318/installer.sh && \
                      bash ./installer.sh && \
                      source ~/.bashrc && \
+                     docker-compose version && \
                      docker-compose up -d && \
                      docker container prune -f && \
                      docker image prune -f"      
