--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -70,8 +70,10 @@ jobs:
     - name: SSH into GCP Instance and Run Docker Compose
       run: |
           gcloud compute ssh curry --zone ${{ secrets.GCE_INSTANCE_ZONE}} \
-          --command="docker-compose up -d && \
-                 docker container prune -f && \
-                 docker image prune -f"      
+          --command="docker pull gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:latest && \
+                     cd /home/smcurry2023
+                     docker-compose up -d && \
+                     docker container prune -f && \
+                     docker image prune -f"      
       env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.SERVICE_ACCOUNT_KEY }}
