--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -71,7 +71,7 @@ jobs:
       run: |
           gcloud compute ssh curry --zone ${{ secrets.GCE_INSTANCE_ZONE}} \
           --command="docker pull gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:latest && \
-                     cd /home/smcurry2023
+                     cd /home/smcurry2023 && \
                      docker-compose up -d && \
                      docker container prune -f && \
                      docker image prune -f"      
