--- a/springboot/curry/docker-compose.yml
+++ b/springboot/curry/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   mysql:
     image: mysql:latest
+    container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PW}
     ports:
@@ -11,21 +12,26 @@ services:
 
   redis:
     image: redis:latest
+    container_name: redis
     command: >
       --requirepass ${REDIS_PW}
     ports:
       - "6379:6379"
+    depends_on:
+      - mysql
 
   flask:
     image: gcr.io/${PROJECT_ID}/flask:latest
+    container_name: flask
     ports:
       - "5000:5000"
+    depends_on:
+      - redis
 
   springboot:
     image: gcr.io/${PROJECT_ID}/springboot:latest
+    container_name: springboot
     ports:
       - "8080:8080"
     depends_on:
       - flask
-      - redis
-      - mysql
