--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -73,6 +73,7 @@ jobs:
         host: ${{ secrets.GCE_INSTANCE }}
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: ${{ secrets.PORT }}
         script: |
             docker pull gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:latest
             docker-compose up -d
