--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -72,8 +72,8 @@ jobs:
       with:
         host: ${{ secrets.GCE_INSTANCE }}
         username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: ${{ secrets.PORT }}
+        password: ${{ secrets.SSH_PASSWORD }}
+        port: ${{ secrets.SSH_PORT }}
         script: |
             docker pull gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:latest
             docker-compose up -d
