--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -75,7 +75,7 @@ jobs:
         password: ${{ secrets.SSH_PASSWORD }}
         port: ${{ secrets.SSH_PORT }}
         script: |
-            docker pull gcr.io/$PROJECT_ID/$DOCKER_IMAGE_NAME:latest
+            docker pull gcr.io/${PROJECT_ID}/${DOCKER_IMAGE_NAME}:latest
             docker-compose up -d
             docker container prune -f
             docker image prune -f
