--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -75,7 +75,8 @@ jobs:
         password: ${{ secrets.SSH_PASSWORD }}
         port: ${{ secrets.SSH_PORT }}
         script: |
-            docker pull "gcr.io/${PROJECT_ID}/${DOCKER_IMAGE_NAME}:latest"
+            gcloud auth configure-docker --quiet
+            docker pull gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.DOCKER_IMAGE_NAME }}:latest
             cd /home/smcurry2023
             docker-compose up -d
             docker container prune -f
