--- a/springboot/curry/src/main/resources/application-prod.properties
+++ b/springboot/curry/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://{MYSQL_URL}:3306/curry?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username={MYSQL_USERNAME}
-spring.datasource.password={MYSQL_PASSWORD}
+spring.datasource.password={MYSQL_PW}
 spring.datasource.initialization-mode=never
 spring.batch.jdbc.initialize-schema=never
 spring.sql.init.encoding=UTF-8
@@ -19,7 +19,7 @@ jwt.token.prefix=Bearer
 
 spring.redis.host={REDIS_URL}
 spring.redis.port=6379
-spring.redis.password={REDIS_PASSWORD}
+spring.redis.password={REDIS_PW}
 
 flask.host={FLASK_URL}
 flask.port=5000
