--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Spring Docker Image CI/CD
 
 on:
   push:
-    branches: ["deploy"]
+    branches: ["main"]
 
 env:
   MYSQL_URL: ${{ secrets.MYSQL_URL }}
@@ -23,8 +23,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-      with:
-        ref: deploy
 
     - name: Setup gcloud CLI
       uses: google-github-actions/setup-gcloud@v0
