Refactor Service Code and Exception

--- a/springboot/curry/src/main/resources/application-prod.properties
+++ b/springboot/curry/src/main/resources/application-prod.properties
@@ -6,24 +6,19 @@ spring.datasource.initialization-mode=never
 spring.batch.jdbc.initialize-schema=never
 spring.sql.init.encoding=UTF-8
 spring.sql.init.mode=always
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.defer-datasource-initialization=true
-
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 jwt.security.key={JWT_SECURITY_KEY}
 jwt.response.header=Authorization
 jwt.token.prefix=Bearer
-
 spring.redis.host={REDIS_URL}
 spring.redis.port=6379
 spring.redis.password={REDIS_PW}
-
 flask.host={FLASK_URL}
 flask.port=5000
-
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
+file.path=/csv/curry_recipe_with_genres.csv
 logging.config=classpath:logback/logback-default.xml
