--- a/springboot/curry/src/main/resources/application-local.properties
+++ b/springboot/curry/src/main/resources/application-local.properties
@@ -1,29 +1,24 @@
-spring.datasource.driver-class-name=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://{MYSQL_URL}:3306/curry?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username={MYSQL_USERNAME}
-spring.datasource.password={MYSQL_PW}
-spring.datasource.initialization-mode=never
-spring.batch.jdbc.initialize-schema=never
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/curry;MODE=MYSQL
+spring.datasource.username=sa
+spring.datasource.password=
+spring.batch.jdbc.initialize-schema=always
 spring.sql.init.encoding=UTF-8
 spring.sql.init.mode=always
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.defer-datasource-initialization=true
-
-jwt.security.key={JWT_SECURITY_KEY}
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.h2.console.enabled=true
+jwt.security.key=secret
 jwt.response.header=Authorization
 jwt.token.prefix=Bearer
-
-spring.redis.host={REDIS_URL}
+spring.redis.host=localhost
 spring.redis.port=6379
-spring.redis.password={REDIS_PW}
-
-flask.host={FLASK_URL}
+spring.redis.password=
+flask.host=localhost
 flask.port=5000
-
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
+file.path=/csv/curry_recipe_with_genres.csv
 logging.config=classpath:logback/logback-default.xml
