Refactor Service Code

--- a/springboot/curry/src/main/resources/application-local.properties
+++ b/springboot/curry/src/main/resources/application-local.properties
@@ -1,3 +1,4 @@
+# spring properties
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:~/curry;MODE=MYSQL
 spring.datasource.username=sa
@@ -12,13 +13,20 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.h2.console.enabled=true
+# jwt properties
 jwt.security.key=secret
 jwt.response.header=Authorization
 jwt.token.prefix=Bearer
+# redis properties
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
+# flask properties
 flask.host=localhost
 flask.port=5000
+# csv file properties
 file.path=/csv/curry_recipe_with_genres.csv
+file.delimiter=@
+file.field.names=recipeId,name,composition,ingredients,servings,difficulty,thumbnail,time,orders,photo,genre
+# logging properties
 logging.config=classpath:logback/logback-default.xml
