--- a/springboot/curry/src/main/resources/application-prod.properties
+++ b/springboot/curry/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
+# spring properties
 spring.datasource.driver-class-name=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://{MYSQL_URL}:3306/curry?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username={MYSQL_USERNAME}
@@ -12,13 +13,20 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+# jwt properties
 jwt.security.key={JWT_SECURITY_KEY}
 jwt.response.header=Authorization
 jwt.token.prefix=Bearer
+# redis properties
 spring.redis.host={REDIS_URL}
 spring.redis.port=6379
 spring.redis.password={REDIS_PW}
+# flask properties
 flask.host={FLASK_URL}
 flask.port=5000
+# csv file properties
 file.path=/csv/curry_recipe_with_genres.csv
+file.delimiter=@
+file.field.names=recipeId,name,composition,ingredients,servings,difficulty,thumbnail,time,orders,photo,genre
+# logging properties
 logging.config=classpath:logback/logback-default.xml
