Refactor Overall Main And Test

--- a/springboot/curry/src/main/resources/application-local.properties
+++ b/springboot/curry/src/main/resources/application-local.properties
@@ -27,6 +27,6 @@ flask.port=5000
 # csv file properties
 file.path=/csv/curry_recipe_with_genres.csv
 file.delimiter=@
-file.field.names=recipeId,name,composition,ingredients,servings,difficulty,thumbnail,time,orders,photo,genre
+file.field.columns=recipeId,name,composition,ingredients,servings,difficulty,thumbnail,time,orders,photo,genre
 # logging properties
 logging.config=classpath:logback/logback-default.xml
